Добавлен тестовый файл с рабочим master SPI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ message(STATUS "\tSources")
 
 
 add_executable(${CMAKE_PROJECT_NAME}
-    main.cpp
+    test.cpp
 )
 
 target_include_directories(${CMAKE_PROJECT_NAME}
